# repl-box

./: CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/repl_box/: __init__.py  _notebook.py  client.py  context.py  server.py
tests/: test_context.py  test_jupyter_e2e.py  test_notebook.py  test_server.py
tests/resources/jupyter_cells/: repl_box_e2e.py
