[project]
name = "repl-box"
version = "0.2.1"
description = "Sandboxed Python REPL server for agents"
requires-python = ">=3.12"
dependencies = [
    "cloudpickle>=3.1.2",
]

[project.scripts]
repl-box = "repl_box.server:serve"
repl-box-client = "repl_box.client:main"

[tool.hatch.build.targets.wheel]
packages = ["src/repl_box"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipython>=9.10.0",
    "ipykernel>=6.30.0",
    "jupyter_client>=8.7.0",
    "openai>=2.21.0",
    "pandas>=3.0.1",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
]
